add DELETE todo API
